# TAMERSv2

./: clap_model.py  clap_train.py  eval_stage2.py  eval_stage3.py  eval_stage4.py  meld_train_slm.py  pyproject.toml  slm_model.py  train_slm.py
datasets/: README.md  __init__.py  download_laion.py  embed_ddp.py  process_LAION_tar_files.py  process_meld.py  reshard.py
