[project]
name = "softwarepackage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.36.0",
    "numpy>=2.3.5",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "sentence-transformers>=5.1.2",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.0",
    "transformers>=4.57.3",
]
